---
source: inline/tests/parser/mod.rs
info: "Test 'ambiguous-close' from 'markup\\bold.yml'"
---
Bold @ (1:1)->(1:19) (
    Plain @ (1:3)->(1:8) (
        bold 
        ^^^^^
    )
    Italic @ (1:8)->(1:17) (
        Plain @ (1:9)->(1:16) (
            +italic
            ^^^^^^^
        )
    )
)
Plain @ (1:19)->(1:25) (
     plain
    ^^^^^^
)

---
With input:

**bold *+italic*** plain


